# spog-ckks

./: CMakeLists.txt  README.md  SPOGCKKSConfig.h.in
cmake/: FindcuPoly.cmake
demos/src/: CMakeLists.txt  add_mul.cpp  conjugate.cpp  depth.cpp  encode_decode.cpp  encrypt_decrypt.cpp  importexport.cpp  merge.cpp  range.cpp  rotate.cpp  sequential_add.cpp  sequential_mul.cpp  simple_add.cpp  simple_mul.cpp  simple_mul_const.cpp  toy_innerprod.cpp
include/SPOGCKKS/: ckks.h  ckkscontext.h  keys.h
include/SPOGCKKS/arithmetic/: ciphertext.h
include/SPOGCKKS/tool/: encoder.h  version.h
src/: ckks.cpp  ckkscontext.cpp  keys.cpp
src/arithmetic/: ciphertext.cpp
src/tool/: encoder.cu  version.cpp
tests/unit_tests/: CMakeLists.txt  test.cpp
